# LinguaFrancaWarehouse

./: .gitignore  LICENSE  README.md  cfg_engine.py  frost_config.yml  pyproject.toml  pytest.ini  requirements.txt  tox.ini
models/: Warehouse.yml  production_plan.json  scheduler.yml  warehouse.yml
python/: test_model.py
scripts/: radon.sh  run_tox.sh
src/: FactoryMain.lf  Magazzino.lf  MovementController.lf  Scheduler.lf  WarehouseMain.lf  WarehouseUnit.lf
src/python/: Platform.py  Slot.py  Tray.py  Warehouse.py  cfg_engine.py  command_reader.py  slot.py  tray.py  warehouse.py  warehouse_controller.py  warehouse_platform.py
tests/: test_cfg_engine.py  test_platform.py  test_slot.py  test_tray.py  test_warehouse.py  test_warehouse_controller.py
utils/: commands.yaml  utils.py
