[tool.poetry]
name = "frost"
version = "0.1.0"
description = "Orchestratore Frost"
authors = ["Luca <lquar@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyyaml = "^6.0.2"
unitsnet-py = ">=0.1.154"
egglog = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pathspec = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"