[tool.poetry]
name = "frost"
version = "0.1.0"
description = "Orchestratore Frost"
authors = ["Luca Quaresima <luca.quaresima@studenti.univr.it>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
unitsnet-py = ">=0.1.154"
egglog = ">=13.0.0"
machine-data-model = {path = "../machine-data-model"}
frost-planner = {path = "../frost-planner"}
pytest = "^9.0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pathspec = "^0.12.1"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"